[package]
name = "monologued"
version = "0.2.1"
authors = ["Elf M. Sternberg" <elf.sternberg@gmail.com"]
license = "MIT"
readme = "README.md"
description = "RFC1288 Server (Local .plan files only)"
homepage = "https://github.com/elfsternberg/monologued"
repository = "https://github.com/elfsternberg/monologued"
keywords = ["server", "finger"]

[dependencies]
mio = "0.6.10"
net2 = "0.2.31"
bytes = "0.4.*"
quick-error = "1.2.*"
toml = "*"
clap = "*"
rfc1288 = { path = "rfc1288" }

[[bin]]
name = "monologued"

[workspace]
members = [
    "rfc1288",
]

